--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,6 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-
-
         <android.support.design.widget.TabLayout
             android:id="@+id/appbartabs"
             android:layout_width="match_parent"
@@ -21,12 +19,19 @@
             app:tabIndicatorColor="@color/colorPrimary"
             app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"/>
 
+        <android.support.v4.view.ViewPager
+            android:id="@+id/container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <!-->
         <FrameLayout
             android:id="@+id/contenedor"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
         </FrameLayout>
+        <!-->
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
