--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,14 +12,14 @@
 
         <Button
             android:id="@+id/btn_Login"
-            android:layout_width="116dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="89dp"
-            android:background="@color/colorPrimary"
+            android:background="@drawable/rounded_borders_default_button"
             android:onClick="loginClicked"
-            android:text="Iniciar sesión"
+            android:text="     Iniciar sesión     "
             android:textColor="@android:color/background_light"
             android:textStyle="bold" />
     </RelativeLayout>
