--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,9 @@
     <color name="colorPrimaryDark">#713537</color>
     <color name="colorPrimaryLight">#B17577</color>
     <color name="colorGrayTab">#EFEFEF</color>
+    <color name="colorGrayButtonText">#666666</color>
     <color name="colorAccent">#479795</color>
     <color name="colorAccentTransparent">#4e479795</color>
+    <color name="button_Request_Community">#004040</color>
+    <color name="white">#ffffff</color>
 </resources>
