Progress Bars agregadas

--- a/app/src/main/res/layout/fragment_communities.xml
+++ b/app/src/main/res/layout/fragment_communities.xml
@@ -29,4 +29,18 @@
             app:backgroundTint="@color/colorPrimaryDark" />
     </RelativeLayout>
 
+    <RelativeLayout
+        android:id="@+id/rlCommunitiesPB"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="invisible">
+
+
+        <ProgressBar
+            android:id="@+id/progressBar2"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true" />
+    </RelativeLayout>
 </FrameLayout>
