--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#974749</color>
     <color name="colorPrimaryDark">#713537</color>
     <color name="colorPrimaryLight">#B17577</color>
-    <color name="colorGrayTab">#EFEFEF</color>
+    <color name="colorGrayTab">#efefef</color>
     <color name="colorGrayButtonText">#666666</color>
     <color name="colorAccent">#479795</color>
     <color name="colorAccentTransparent">#4e479795</color>
