--- a/app/src/main/res/layout/activity_edit_user.xml
+++ b/app/src/main/res/layout/activity_edit_user.xml
@@ -6,82 +6,135 @@
     android:layout_height="match_parent"
     tools:context="elcarmen.project.community.Business.EditUserActivity">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <ImageButton
-            android:id="@+id/imgBut_user"
-            android:layout_width="150dp"
-            android:layout_height="125dp"
-            android:layout_gravity="center_vertical|center_horizontal|center"
-            android:layout_marginTop="10dp"
-            app:srcCompat="@drawable/user_box_photo" />
-
-        <EditText
-            android:id="@+id/edt_nameUser"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
-            android:ems="10"
-            android:hint="Name"
-            android:inputType="textPersonName"
-            android:textAlignment="center"
-            android:textStyle="bold" />
+            android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/edt_tel1User"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="5dp"
-            android:ems="10"
-            android:hint="Tel 1"
-            android:inputType="phone"
-            android:textAlignment="center" />
+            <ImageButton
+                android:id="@+id/imgBut_user"
+                android:layout_width="150dp"
+                android:layout_height="125dp"
+                android:layout_gravity="center_vertical|center_horizontal|center"
+                android:layout_marginTop="10dp"
+                app:srcCompat="@drawable/user_box_photo" />
 
-        <EditText
-            android:id="@+id/edt_tel2User"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="5dp"
-            android:ems="10"
-            android:hint="Tel 2"
-            android:inputType="phone"
-            android:textAlignment="center" />
+            <EditText
+                android:id="@+id/edt_nameUser"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="5dp"
+                android:ems="10"
+                android:hint="Nombre"
+                android:inputType="textPersonName"
+                android:textAlignment="center"
+                android:textStyle="bold" />
 
-        <EditText
-            android:id="@+id/edt_addressUser"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="5dp"
-            android:ems="10"
-            android:hint="Address"
-            android:inputType="textMultiLine|textPostalAddress"
-            android:textAlignment="center" />
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal">
 
-        <CheckBox
-            android:id="@+id/check_privateUser"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="5dp"
-            android:text="Mantener la información privada" />
+                <EditText
+                    android:id="@+id/edt_tel1User"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="15dp"
+                    android:ems="10"
+                    android:hint="Cel"
+                    android:inputType="phone"
+                    android:textAlignment="center" />
 
-        <Button
-            android:id="@+id/btn_saveEditUser"
-            style="@android:style/Widget.Material.Light.Button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="17dp"
-            android:background="@color/colorPrimary"
-            android:onClick="saveChangesClicked"
-            android:text="Guardar cambios"
-            android:textColor="@color/colorGrayTab" />
-    </LinearLayout>
+                <ImageView
+                    android:id="@+id/imageView3"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_alignTop="@+id/edt_tel1User"
+                    android:layout_centerVertical="true"
+                    android:layout_toEndOf="@+id/edt_tel1User"
+                    app:srcCompat="@drawable/ic_cell_phone" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal">
+
+                <EditText
+                    android:id="@+id/edt_tel2User"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_below="@+id/edt_tel1User"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="10dp"
+                    android:ems="10"
+                    android:hint="Tel"
+                    android:inputType="phone"
+                    android:textAlignment="center" />
+
+                <ImageView
+                    android:id="@+id/imageView4"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_centerVertical="true"
+                    android:layout_toEndOf="@+id/edt_tel2User"
+                    app:srcCompat="@drawable/ic_phone" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal">
+
+                <EditText
+                    android:id="@+id/edt_addressUser"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="10dp"
+                    android:ems="10"
+                    android:hint="Direccion"
+                    android:inputType="textMultiLine|textPostalAddress"
+                    android:textAlignment="textStart" />
+
+                <ImageView
+                    android:id="@+id/imageView5"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_centerVertical="true"
+                    android:layout_toEndOf="@+id/edt_addressUser"
+                    app:srcCompat="@drawable/ic_home_black_24dp" />
+            </RelativeLayout>
+
+            <CheckBox
+                android:id="@+id/check_privateUser"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="5dp"
+                android:text="Mantener la información privada" />
+
+            <Button
+                android:id="@+id/btn_saveEditUser"
+                style="@android:style/Widget.Material.Light.Button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="17dp"
+                android:background="@drawable/rounded_borders_default_button"
+                android:onClick="saveChangesClicked"
+                android:text="Guardar cambios"
+                android:textColor="@color/colorGrayTab" />
+        </LinearLayout>
+    </ScrollView>
+
 </android.support.constraint.ConstraintLayout>
