--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -38,7 +38,7 @@
             <EditText
                 android:id="@+id/edt_contentNews"
                 android:layout_width="300dp"
-                android:layout_height="wrap_content"
+                android:layout_height="150dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="20dp"
                 android:ems="10"
@@ -53,6 +53,7 @@
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="30dp"
                 android:background="@drawable/rounded_borders_default_button"
+                android:onClick="publicarClicked"
                 android:text="Agregar difusion"
                 android:textColor="@color/colorGrayTab" />
 
