--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -53,7 +53,7 @@
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="30dp"
                 android:background="@drawable/rounded_borders_default_button"
-                android:onClick="publicarClicked"
+                android:onClick="addClicked"
                 android:text="Agregar difusion"
                 android:textColor="@color/colorGrayTab" />
 
