--- a/app/src/main/res/layout/fragment_community_feed.xml
+++ b/app/src/main/res/layout/fragment_community_feed.xml
@@ -5,10 +5,26 @@
     android:layout_height="match_parent"
     tools:context=".Business.CommunityFeedFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RelativeLayout
+        android:id="@+id/rlNews"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
+
+        <ListView
+            android:id="@+id/lvNews"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/ftbtnCreateNews"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="19dp"
+            android:layout_marginEnd="21dp"
+            android:clickable="true"
+            android:src="@drawable/ic_add_white_24dp" />
+    </RelativeLayout>
 
 </FrameLayout>
