--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -13,9 +13,10 @@
 
         <ImageView
             android:id="@+id/img_New"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="160dp"
+            android:layout_height="120dp"
             android:layout_gravity="center_horizontal"
+            android:layout_marginTop="8dp"
             app:srcCompat="@mipmap/ic_launcher" />
 
         <RelativeLayout
@@ -82,8 +83,8 @@
 
             <Button
                 android:id="@+id/btn_EliminarNew"
-                android:layout_width="40dp"
-                android:layout_height="30dp"
+                android:layout_width="30dp"
+                android:layout_height="20dp"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
                 android:layout_gravity="end"
@@ -97,6 +98,7 @@
                 android:layout_height="30dp"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="5dp"
                 android:background="@drawable/rounded_borders_default_button"
                 android:text="Ver mas"
                 android:textColor="@color/white"
