--- a/app/src/main/res/layout/fragment_community_feed.xml
+++ b/app/src/main/res/layout/fragment_community_feed.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -21,10 +22,11 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginBottom="19dp"
-            android:layout_marginEnd="21dp"
+            android:layout_marginBottom="18dp"
+            android:layout_marginEnd="22dp"
             android:clickable="true"
-            android:src="@drawable/ic_add_white_24dp" />
+            android:src="@drawable/ic_add_white_24dp"
+            app:backgroundTint="@color/colorPrimary" />
     </RelativeLayout>
 
 </FrameLayout>
