--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -9,86 +9,91 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="?android:attr/panelBackground"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/img_New"
-            android:layout_width="160dp"
-            android:layout_height="120dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="8dp"
-            app:srcCompat="@mipmap/ic_launcher" />
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/img_New"
+                android:layout_width="190dp"
+                android:layout_height="100dp"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="8dp"
+                android:scaleType="fitXY"
+                app:srcCompat="@drawable/img_comm_default" />
+
+            <TextView
+                android:id="@+id/txt_aprobar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="false"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="8dp"
+                android:paddingRight="8dp"
+                android:text="Aprobar"
+                android:textColor="@color/button_Request_Community"
+                android:textStyle="bold" />
+
+        </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <Button
-                android:id="@+id/btn_AceptarNew"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_above="@+id/button"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="10dp"
-                android:background="@drawable/rounded_borders_button"
-                android:text="Aprobar"
-                android:textColor="@color/white"
-                android:textSize="14sp" />
-
             <LinearLayout
                 android:id="@+id/linearlay"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
                 android:layout_marginLeft="10dp"
                 android:orientation="vertical">
 
 
                 <TextView
                     android:id="@+id/txtTitleNew"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
 
                     android:layout_below="@+id/txtFechaHora"
+                    android:layout_gravity="center"
                     android:text="Title"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="20sp"
+                    android:textSize="17sp"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/txtFechaHora"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/txtFechaHora"
+                    android:layout_gravity="center_horizontal"
                     android:text="dd/mm/yyyy HH:mm"
-                    android:textSize="12sp"
+                    android:textSize="10sp"
                     android:textStyle="italic" />
-
-                <TextView
-                    android:id="@+id/txtContent"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/txtFechaHora"
-                    android:singleLine="false"
-                    android:text="Contenido" />
 
             </LinearLayout>
 
         </RelativeLayout>
 
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
             <Button
                 android:id="@+id/btn_EliminarNew"
                 android:layout_width="30dp"
                 android:layout_height="20dp"
+                android:layout_alignParentBottom="false"
                 android:layout_alignParentEnd="true"
-                android:layout_alignParentTop="true"
-                android:layout_gravity="end"
-                android:layout_marginEnd="12dp"
+                android:layout_alignParentTop="false"
+                android:layout_centerVertical="true"
+                android:layout_gravity="bottom|end"
+                android:layout_marginRight="12dp"
                 android:background="@drawable/ic_delete_forever_black_24dp"
                 android:textSize="12sp" />
 
@@ -99,6 +104,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="5dp"
+                android:layout_marginTop="12dp"
                 android:background="@drawable/rounded_borders_default_button"
                 android:text="Ver mas"
                 android:textColor="@color/white"
