--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -21,6 +21,7 @@
                 android:layout_width="250dp"
                 android:layout_height="125dp"
                 android:layout_gravity="center_horizontal"
+                android:scaleType="fitXY"
                 android:layout_marginTop="20dp"
                 app:srcCompat="@drawable/ic_add_white_24dp" />
 
