--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -96,7 +96,6 @@
                 android:id="@+id/btn_EliminarNew"
                 android:layout_width="30dp"
                 android:layout_height="20dp"
-                android:layout_alignParentBottom="false"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="false"
                 android:layout_centerVertical="true"
@@ -106,7 +105,7 @@
                 android:textSize="12sp" />
 
             <Button
-                android:id="@+id/btn_VerMasNew"
+                android:id="@+id/btn_NewMore"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:layout_centerHorizontal="true"
