--- a/app/src/main/res/layout/fragment_community_feed.xml
+++ b/app/src/main/res/layout/fragment_community_feed.xml
@@ -26,7 +26,7 @@
             android:layout_marginEnd="22dp"
             android:clickable="true"
             android:src="@drawable/ic_add_white_24dp"
-            app:backgroundTint="@color/colorPrimary" />
+            app:backgroundTint="@color/colorPrimaryDark" />
     </RelativeLayout>
 
 </FrameLayout>
