--- a/app/src/main/res/layout/activity_favorites.xml
+++ b/app/src/main/res/layout/activity_favorites.xml
@@ -4,12 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    tools:context="elcarmen.project.community.Business.FavoritesActivity">
 
     <ScrollView
-        android:layout_width="368dp"
-        android:layout_height="491dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="4dp">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -23,8 +22,10 @@
                 android:layout_marginLeft="130dp"
                 android:layout_weight="1"
                 android:text="Button"
+                android:onClick="pruebaClicked"
                 tools:layout_editor_absoluteX="78dp"
                 tools:layout_editor_absoluteY="142dp" />
+
         </LinearLayout>
     </ScrollView>
 
