--- a/app/src/main/res/layout/activity_favorites.xml
+++ b/app/src/main/res/layout/activity_favorites.xml
@@ -14,7 +14,18 @@
         <ListView
             android:id="@+id/lvFavorites"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent" >
+
+        </ListView>
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/tvError"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="¡Oh no!  Parece que aún no has destacado ninguna difusión."
+        android:textAllCaps="false"
+        android:textSize="19sp"
+        tools:textColor="@color/colorPrimaryDark" />
 
 </FrameLayout>
