--- a/app/src/main/res/layout/fragment_community_members.xml
+++ b/app/src/main/res/layout/fragment_community_members.xml
@@ -45,9 +45,25 @@
                 android:textStyle="bold|italic" />
 
         </RelativeLayout>
-
-        <ListView
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent">
+
+            <ListView
+                android:id="@+id/lvUsers"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"></ListView>
+
+            <ProgressBar
+                android:id="@+id/pbSearchProfile"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:visibility="invisible" />
+
+
+        </RelativeLayout>
+
     </LinearLayout>
 </FrameLayout>
